@@ -1,10 +1,14 @@
+===============================================================================
+06/08/2013 - jTDS 1.3.1 released
+===============================================================================
+
 Changes from jTDS 1.3.0
 =======================
 
 06/02/2013 - Holger Rehn
  o Fixed bug #702, JtdsConnection.getMutex() isn't thread-safe.
  o jTDS throws an SQLTimeoutException if an operation times out (bug #701).
- 
+
 05/16/2013 - Holger Rehn
  o Added range check to class BlobBuffer as proposed by Benedict Elliott Smith.
  o Applied patch for explicitly creating an in-memory BlobBuffer provided by
@@ -55,7 +59,8 @@ Changes from jTDS 1.3.0
 
 10/28/2012 - Holger Rehn
  o Added test for bug #575, parameter types not available via ParameterMetaData.
- o Fixed build script, Maven artifacts are no included in the distro package.
+ o Fixed build script, Maven artifacts are no longer included in the distro
+   package.
 
 ===============================================================================
 10/27/2012 - jTDS 1.3.0 released
